<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grouple</string>
    <string name="currentUser"></string>
    <string name="loginTextView">Login</string>
    <string name="registerTextView">Register</string>
    <string name="homeTextView">Grouple</string>
    <string name="userTextView">User Profile</string>
    <string name="groupsTextView">Groups</string>
    <string name="emailEditText">Enter email</string>
    <string name="passwordEditText">Enter password</string>
    <string name="rePasswordEditText">Re-Enter Password</string>
    <string name="fNameEditText">Enter First Name</string>
    <string name="lNameEditText">Enter Last Name</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Grouple Home</string>
    <string name="eventsTextView">Events</string>
    <string name="eventsButton">Events</string>
    <string name="groupsButton">Groups</string>
    <string name="backButton">Back</string>
    <string name="logoutButton">Logout</string>
    <string name="createGroupButton">Create Group</string>
    <string name="yourGroupsButton">My Groups</string>
    <string name="pendingGroupsButton">Group Invites</string>
    <string name="createEventButton">Create Event</string>
    <string name="unconfirmedEventsButton">Unconfirmed Events</string>
    <string name="upcomingEventsButton">Upcoming Events</string>
    <string name="pastEventsButton">Past Events</string>
    <string name="userButton">User</string>
    <string name="noFriendRequestsTextView">No friend requests to display!</string>
    <string name="homeButton">Home</string>
    <string name="title_activity_user">User Profile</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginFailString">Incorrect Email or Password!</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="title_activity_current_friends">Friends</string>
    <string name="title_activity_friend_requests">Friend Requests</string>
    <string name="title_activity_resources">Resources</string>
    <string name="title_activity_global">Global</string>
    <string name="editProfilePhotoButton">Edit Photo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_messages">Messages</string>


    <color name="hint_text_color">#7022252A</color>
    <color name="text_color">#22252A</color>
    <color name="button_text_color">#FCF9F0</color>
    <color name="background_color">#FCF9F0</color>
    <color name="layout_background_color">#2855B1D5</color>
    <color name="actionbar_background_color">#7BE055</color>
    <color name="button_border_color">#FBDD4B</color>
    <color name="header_text_color">#22252A</color>
    <color name="border_color">#55B1D5</color>
   	<color name="button_background_color">#F18C39</color>

   	<color name="white">#FCF9F0</color>
	<color name="light_blue">#55B1D5</color>
    <color name="light_green">#7BE055</color>
    <color name="light_green_opacity">#A07BE055</color>
    <color name="red">#EF4223</color>
    <color name="yellow">#FBDD4B</color>
    <color name="orange">#F18C39</color>
    <color name="black">#22252A</color>
    
    
    	<color name="dark_green">#12654D</color>
    <color name="dark_green_opacity">#7012654D</color>
    
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_friend_profile">FriendProfileActivity</string>
    <string name="AddGroup">Add to Group</string>
    <string name="Confirm">Create this Group</string>
    <string name="introMessage">Tap a friend\'s name to add (toggle icon to make admin)</string>
    <string name="isAdmin">Give person Admin privileges</string>
    <string name="groupNameMessage">Give your group a name</string>
    <string name="bioMessage">About Group</string>
    <string name="groupBioMessage">Tell people a little about this group</string>
    <string name="confirm">Confirm Create Group</string>
    <color name="groupCreateBlue">#31698a</color>
    <color name="groupCreateGrey">#3a3a3a</color>
    <string name="introMessage2">Current members in this group</string>
    <color name="wiseGuyEh">#000033</color>
    <color name="tryThis">#55319337</color>

</resources>
