<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   	android:id="@+id/eventsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:padding="0dp" >

    <Button
        android:id="@+id/pastEventsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/upcomingEventsButton"
        android:text="@string/pastEventsButton" />

    <Button
        android:id="@+id/upcomingEventsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/unconfirmedEventsButton"
        android:text="@string/upcomingEventsButton" />

    <Button
        android:id="@+id/unconfirmedEventsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/createEventButton"
        android:text="@string/unconfirmedEventsButton" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="46dp"
        android:text="@string/createEventButton" />

</RelativeLayout>