<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" >

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/registerTextView"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/emailEditTextRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/emailEditText"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButtonRA"
        android:layout_width="600dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
		
        android:onClick="loginButton"
        android:text="@string/loginButton" />

    <EditText
        android:id="@+id/passwordEditTextRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailEditTextRA"
        android:layout_alignRight="@+id/emailEditTextRA"
        android:layout_below="@+id/emailEditTextRA"
        android:ems="10"
        android:hint="@string/passwordEditText"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/rePasswordEditTextRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditTextRA"
        android:layout_alignRight="@+id/passwordEditTextRA"
        android:layout_below="@+id/passwordEditTextRA"
        android:ems="10"
        android:hint="@string/rePasswordEditText"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/fNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rePasswordEditTextRA"
        android:layout_below="@+id/rePasswordEditTextRA"
        android:ems="10"
        android:hint="@string/fNameEditText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fNameEditText"
        android:layout_below="@+id/fNameEditText"
        android:ems="10"
        android:hint="@string/lNameEditText"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/noFriendRequestsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButtonRA"
        android:layout_centerHorizontal="true"
        android:text="Already have a Grouple account?"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/registerButtonRA"
        android:layout_width="600dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/lNameEditText"
        android:layout_below="@+id/lNameEditText"
        android:onClick="registerButton"
        android:text="@string/registerButton" />

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButtonRA"
        android:layout_centerHorizontal="true"
        android:text="Passwords must match!"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

</RelativeLayout>
