<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="cs460.grouple.grouple.GroupsActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/createGroupButton"
        android:layout_width="600dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:text="@string/createGroupButton" />

     
    <Button
        android:id="@+id/yourGroupsButton"
        android:layout_width="600dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/createGroupButton"
        android:layout_below="@+id/createGroupButton"
        android:text="@string/yourGroupsButton" />

    <Button
        android:id="@+id/pendingGroupsButton"
        android:layout_width="600dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/yourGroupsButton"
        android:layout_below="@+id/yourGroupsButton"
        android:text="@string/pendingGroupsButton" />

    <TextView
        android:id="@+id/groupsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/groupsTextView"
        android:textSize="24sp" />

   	<GridLayout
   		android:id="@+id/navigationBarGridLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="400dp"
	    android:layout_marginBottom="0dp"
	    android:padding="0dp"
	    android:columnCount="4"
	    android:rowCount="1" >
	    
     	<Button
	        android:id="@+id/homeButton"
	        android:padding="0dp"
	        android:layout_column="0"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_row="0"
	       	android:layout_margin="3dp"
	       	android:layout_marginLeft="10dp"
	        android:onClick="startHomeActivity"
	       	android:background="@drawable/home_icon" />
	
	    <Button
	        android:id="@+id/groupsButton"
	        android:layout_column="2"
	        android:layout_gravity="center_horizontal"
	        android:padding="0dp"
	        android:layout_row="0"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	       	android:layout_margin="3dp"
	        android:background="@drawable/groups_icon" />
	
	    <Button
	        android:id="@+id/eventsButton"
			android:layout_column="3"
			android:padding="0dp"
			android:layout_width="80dp"
	        android:layout_height="80dp"
	       	android:layout_margin="3dp"
			android:layout_gravity="center_horizontal"
	        android:layout_row="0"
	        android:background="@drawable/events_icon"
	        android:onClick="startEventsActivity" />

	    <Button
	        android:id="@+id/userButton"
	      	android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:layout_column="1"
	       	android:layout_margin="3dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_row="0"
	        android:background="@drawable/user_icon"
	        android:padding="0dp"
	        android:onClick="startUserActivity" />
	    
	</GridLayout>
</RelativeLayout>