<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:padding="0dp"
    tools:context="cs460.grouple.grouple.EventsActivity$PlaceholderFragment" >

    <GridLayout
        android:id="@+id/navigationBarGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="400dp"
        android:columnCount="4"
        android:padding="0dp"
        android:rowCount="2" >

        <Button
            android:id="@+id/homeButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:layout_marginLeft="10dp"
            android:layout_row="0"
            android:background="@drawable/home_icon"
            android:onClick="startHomeActivity"
            android:padding="0dp" />

        <Button
            android:id="@+id/groupsButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:layout_row="0"
            android:background="@drawable/groups_icon"
            android:onClick="startGroupsActivity"
            android:padding="0dp" />

        <Button
            android:id="@+id/eventsButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:layout_row="0"
            android:background="@drawable/events_icon"
            android:padding="0dp" />

        <Button
            android:id="@+id/userButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:layout_row="0"
            android:background="@drawable/user_icon"
            android:onClick="startUserActivity"
            android:padding="0dp" />

        <TextView
            android:id="@+id/userNotificationTextView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_column="1"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:background="@drawable/notification_icon"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:visibility="invisible" />
    </GridLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/eventsTextView"
        android:textSize="24sp" />

    <Button
        android:id="@+id/pastEventsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/upcomingEventsButton"
        android:text="@string/pastEventsButton" />

    <Button
        android:id="@+id/upcomingEventsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/unconfirmedEventsButton"
        android:text="@string/upcomingEventsButton" />

    <Button
        android:id="@+id/unconfirmedEventsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/createEventButton"
        android:text="@string/unconfirmedEventsButton" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="46dp"
        android:text="@string/createEventButton" />

</RelativeLayout>